<resources>
    <string name="app_name">SearchityApp</string>
    <string name="title_activity_actividad_menu_principal">ActividadMenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="titulo_tics">Ing. TICS</string>
    <string name="titulo_electronica">Ing. Electronica</string>
    <string name="titulo_mecanica">Ing. Mecanica</string>
    <string name="titulo_materiales">Ing. Materiales</string>
    <string name="titulo_gestion">Ing. Gestion Empresarial</string>
    <string name="titulo_quimica">Ing. Quimica</string>
    <string name="titulo_electrica">Ing. Electrica</string>

    <string name="separacion_carrera">Por carrera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="boton_de_descarga">boton de descarga</string>
    <string name="boton_de_archivos">boton de archivos</string>
    <string name="boton_de_subir">boton de subir</string>
    <string name="imagen_de_logo">imagen de logo</string>
</resources>
