<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="@string/separacion_carrera">
        <menu>
            <item
                android:id="@+id/nav_tics"
                android:icon="@drawable/tics"
                android:title="@string/titulo_tics" />
            <item
                android:id="@+id/nav_electronica"
                android:icon="@drawable/tics"
                android:title="@string/titulo_electronica" />
            <item
                android:id="@+id/nav_mecanica"
                android:icon="@drawable/tics"
                android:title="@string/titulo_mecanica"/>
            <item
                android:id="@+id/nav_quimica"
                android:icon="@drawable/tics"
                android:title="@string/titulo_quimica"/>
            <item
                android:id="@+id/nav_materiales"
                android:icon="@drawable/tics"
                android:title="@string/titulo_materiales"/>
            <item
                android:id="@+id/nav_electrica"
                android:icon="@drawable/tics"
                android:title="@string/titulo_electrica"/>
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
